# polystation

./: Cargo.toml  README.md  polymarket-ui.bat
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/commands/: bridge.rs
cli/src/output/: bridge.rs
scripts/: update-formula.sh
src/: main.rs
src/commands/: copy.rs  mod.rs
src/output/: copy.rs  copy_ui.html  mod.rs
tests/: cli_integration.rs
